force-app/main/default/objects/Onboarding_External_Override_Log__c/Onboarding_External_Override_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log for external override operations on Onboarding__c.</description>
    <label>Onboarding External Override Log</label>
    <nameField>
        <displayFormat>OOL-{000000}</displayFormat>
        <label>Override Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding External Override Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>