force-app/main/default/objects/Onboarding_External_Override_Log__c/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <label>New Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>