force-app/main/default/objects/Onboarding_External_Override_Log__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding</label>
    <referenceTo>Onboarding__c</referenceTo>
    <relationshipLabel>Onboarding External Override Logs</relationshipLabel>
    <relationshipName>Onboarding_External_Override_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>