force-app/main/default/objects/Onboarding_External_Override_Log__c/fields/Override_Action__c.field-meta.xml
<CustomField>
    <fullName>Override_Action__c</fullName>
    <label>Override Action</label>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
                <default>true</default>
                <label>Applied</label>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>