force-app/main/default/objects/Onboarding_External_Override_Log__c/fields/Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_ID__c</fullName>
    <label>Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>